# postowl

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hooversion.config.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  wdio.conf.ts
.github/workflows/: ci.yml  release.yml
scripts/: sync-version.ts
src/: App.svelte  App.tsx  app.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  error.rs  lib.rs  main.rs  model.rs  script.rs
src/lib/: api.ts  types.ts  utils.ts  validation.ts
src/lib/components/: ActionButton.svelte  ActionButton.tsx  EnvironmentEditor.svelte  EnvironmentEditor.tsx  KeyValueEditor.svelte  KeyValueEditor.tsx  RequestEditor.svelte  RequestEditor.tsx  ResponsePanel.svelte  ResponsePanel.tsx  Sidebar.svelte  Sidebar.tsx  UpdateNotice.tsx
src/lib/components/ui/: FieldError.tsx  MethodTag.tsx  SegmentedControl.tsx  Tabs.tsx
tests/e2e/: native.spec.ts
